<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">
    <LinearLayout
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/firstRow"
        android:layout_weight="1"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/backBtn"
            android:text="@string/backBtn"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/newScheduleTitle"
            android:text="@string/newSchedule"
            android:layout_weight="2"
            android:gravity="center"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/saveBtn"
            android:text="@string/saveBtn"
            android:layout_weight="1"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentText"
        android:hint="@string/contentText"
        android:gravity="top"
        android:focusable="true"
        android:layout_weight="4"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note"
        android:hint="@string/note"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fourthRow"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/setTimeBtn"
            android:text="@string/chooseTime"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#C0C0C0"
            android:textOn="@string/remindOnTime"
            android:textOff="@string/remindOnTime"
            android:checked="false"
            android:id="@+id/ring_On_Time"
            android:layout_weight="2"
            />
        <Button
            android:text="@string/chooseDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/setDate"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lastRow"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/setRingstone"
            android:text="@string/chooseringston"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sortTagText"
            android:text="@string/tag"
            android:gravity="center"
            android:layout_weight="2"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sortTag"
            android:entries="@array/cities"
            android:prompt="@string/tag"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>
