<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    >
    <LinearLayout
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/editSchedule_firstRow"
        android:layout_weight="1"
        android:gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editSchedule_backBtn"
            android:text="@string/backBtn"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editScheduleTitle"
            android:text="@string/newSchedule"
            android:layout_weight="2"
            android:gravity="center"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editSchedule_saveBtn"
            android:text="@string/saveBtn"
            android:layout_weight="1"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSchedule_contentText"
        android:hint="@string/contentText"
        android:gravity="top"
        android:focusable="true"
        android:layout_weight="4"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editSchedule_note"
            android:hint="@string/note"
            android:layout_margin="2dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/editSchedule_fourthRow"
        android:gravity="center"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editSchedule_setTimeBtn"
            android:text="@string/chooseTime"
            android:layout_weight="1"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/isRemindOnTime"
            android:textOff="@string/isRemindOnTime"
            android:checked="false"
            android:id="@+id/editSchedule_ring_On_Time"
            android:layout_weight="2"
            android:layout_margin="2dp"
            />
        <Button
            android:text="@string/chooseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editSchedule_setDate"
            android:layout_weight="1"
            android:layout_margin="2dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/editSchedule_lastRow"
        android:layout_weight="1"
        android:weightSum="4"
        android:gravity="center">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editSchedule_setRingstone"
            android:text="@string/chooseringston"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:layout_margin="2dp"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editSchedule_sortTagText"
                android:text="@string/tag"
                android:ems="12"
                android:gravity="center_horizontal"
                android:layout_alignTop="@+id/editSchedule_sortTag"
                android:layout_alignBottom="@+id/editSchedule_sortTag"
                android:layout_alignParentStart="true"
                android:layout_margin="2dp"
                tools:ignore="RelativeOverlap" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editSchedule_sortTag"
                android:entries="@array/cities"
                android:prompt="@string/tag"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
